Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: todoappui
 namespace: todo
spec:
 replicas: 2
 selector:
  matchLabels:
    app: todoappui
 template:
   metadata:
     labels:
       app: todoappui
   spec:
     containers:
       - name: todoappui
         image: mkashifj/todoappui:v2
         ports:
           - containerPort: 80
