Service.yml
apiVersion:	v1
kind: Service
metadata:
 name: todoappui
 namespace: todo
spec:
  type: ClusterIP
  selector:
    app: todoappui
  ports:
    - port: 80
      targetPort: 80
