Ingress.yml
apiVersion:	networking.k8s.io/v1
kind: Ingress
metadata:
 name: ui-ingress
 namespace: todo
#  annotations:
  # kubernetes.io/ingress.class: azure/application-gateway
spec:
 ingressClassName: azure-application-gateway
 rules:
   - host: frontend.kashifcloud.online
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todoappui
            port: 
              number: 80
